--- a/assets/style.css
+++ b/assets/style.css
@@ -281,17 +281,16 @@ a:hover{
     white-space: nowrap;
     top: 0;
     left: 0;
-    animation: move 10s;
+    animation: move 8s;
     animation-iteration-count: infinite;
-    animation-delay: 3s;
+    animation-delay: 3.5s;
   }
 
   @keyframes move {
     0%  { top: 0rem; }
-    20% { top: -8rem; }
-    40% { top: -16rem; }
-    60% { top: -24rem; }
-    80% { top: -32rem; }
+    25% { top: -8rem; }
+    50% { top: -16rem; }
+    75% { top: -24rem; }
     }
 
     .plus{
@@ -304,9 +303,9 @@ a:hover{
         width: 8rem;
         left: 50%;
         bottom:2vh;
-        transform:translateY(-100%);
+        transform:translateY(-50%);
         color: var(--button);
-        z-index: 11;
+        z-index: 1;
     }
 
     .scroll-chevron svg{
@@ -515,7 +514,7 @@ a:hover{
 
 .little-projects{
     text-align: center;
-    padding-top: 10rem;
+    padding-top: 5rem;
 }
 
 .little-project{
@@ -772,17 +771,16 @@ td:nth-child(odd) {
     white-space: nowrap;
     top: 0;
     left: 0;
-    animation: move 10s;
+    animation: move 8s;
     animation-iteration-count: infinite;
-    animation-delay: 2s;
+    animation-delay: 3.5s;
   }
 
   @keyframes move {
     0%  { top: 0rem; }
-    20% { top: -4.5rem; }
-    40% { top: -9.1rem; }
-    60% { top: -13.7rem; }
-    80% { top: -18.5rem; }
+    25% { top: -4.75rem; }
+    50% { top: -9.5rem; }
+    75% { top: -14.25rem; }
     }
     
 
@@ -838,26 +836,30 @@ td:nth-child(odd) {
 
         .nav-menu {
             position: fixed;
-            top:0;
+            top:-7rem;
             left: 100%;
             flex-direction: column;
             background-color: var(--background);
-            width: 100%;
+            width: 70%;
             height: 110%;
             text-align: center;
             padding-top: 15rem;
             transition: 0.3s;
             box-shadow: 0 1rem 2.7rem rgba(0, 0, 0, 0.05);
-            z-index: 1;
+            z-index: 12;
         }
     
         .nav-menu.active {
-            left: 0;
+            left: 30%;
             margin-top: 0;
         }
     
         .nav-item {
             margin: 2.5rem 0;
+        }
+
+        nav ul a{
+            text-decoration: none;
         }
 
         .logo{
@@ -868,7 +870,7 @@ td:nth-child(odd) {
             display: block;
             cursor: pointer;
             padding: 1rem 1rem 0 0;
-            z-index:10;
+            z-index:13;
         }
 
         .bar{
@@ -954,5 +956,9 @@ td:nth-child(odd) {
         }
         .help-item{
             width: 100%;
+        }
+
+        .offer-section{
+            display: none;
         }
 }
