--- a/assets/style.scss
+++ b/assets/style.scss
@@ -968,4 +968,7 @@ td:nth-child(odd) {
         .om-louise ul{
             width: 100%;
         }
+        .timeline{
+            display: none;
+        }
 }
